fixed section align

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1323,7 +1323,7 @@ p, li {
     font-weight: 300;
     text-align: center;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
-    font-family: 'SourceSansPro', sans-serif; 
+    font-family: 'SourceSansPro', sans-serif;
 }
 
 #weather ul {
@@ -1434,7 +1434,7 @@ p, li {
         text-align: center;
     }
 
-    .subsectiontitle, h4, p.author-left, .author-mobile, p.author{
+    .subsectiontitle, h4, p.author-left, .author-mobile, p.author, .subsectiontitle-left{
       text-align: center;
     }
 }
